# ProgettoLaboratorio

./: CMakeLists.txt  README.md  main.cpp
Headers/: Accreditation.h  BankAccount.h  Client.h  FileManagement.h  Payment.h  Transaction.h  clientType.h  constantValues.h  getDate.h  randomString.h  readAll.h  writeTransaction.h
Sources/: Accreditation.cpp  BankAccount.cpp  Client.cpp  FileManagement.cpp  Payment.cpp  Transaction.cpp  getDate.cpp  main.cpp  randomString.cpp  readAll.cpp  writeTransaction.cpp
